--- a/htdocs/mirrors.html
+++ b/htdocs/mirrors.html
@@ -84,14 +84,14 @@ where the mirror is located.
 <!-- <li>US (Arizona): <a href="ftp://ftp.ninemoons.com/pub/mirrors/egcs/">ftp.ninemoons.com</a> !-->
 <!--<li>US (Stanford): <a href="ftp://go.cygnus.com/pub/sourceware.cygnus.com/pub/egcs/">go.cygnus.com</a> !-->
 <LI>Japan: <A HREF="ftp://ftp.iij.ad.jp/pub/egcs">ftp.iij.ad.jp</a>
-<!-- <li>Japan (Ibaraki): <a href="ftp://ring.aist.go.jp/pub/lang/egcs">ring.aist.go.jp</a>
-<li>Japan: <a href="ftp://ring.etl.go.jp/pub/lang/egcs">ring.etl.go.jp</a>
-<li>Japan (Tokyo): <a href="ftp://ring.asahi-net.or.jp/pub/lang/egcs">ring.asahi-net.or.jp</a>
-<li>Japan: <a href="ftp://ring.crl.go.jp/pub/lang/egcs">ring.crl.go.jp</a>
-<li>Japan (Tokyo): <a href="ftp://ring.so-net.ne.jp/pub/lang/egcs">ring.so-net.ne.jp</a>
-<li>Japan: <a href="ftp://ring.jah.ne.jp/pub/lang/egcs">ring.jah.ne.jp</a>
-<li>Japan: <a href="ftp://ring.astem.or.jp/pub/lang/egcs">ring.astem.or.jp</a>
-<li>Japan: <a href="ftp://ring.saitama-u.ac.jp/pub/lang/egcs">ring.saitama-u.ac.jp</a>
-<li>Japan: <a href="ftp://ring.nacsis.ac.jp/pub/lang/egcs">ring.nacsis.ac.jp</a>
-<li>Japan: <a href="ftp://ring.exp.fujixerox.co.jp/pub/lang/egcs">ring.exp.fujixerox.co.jp</a>
-<li>Japan: <a href="ftp://ring.ip-kyoto.ad.jp/pub/lang/egcs">ring.ip-kyoto.ad.jp</a> !--)
+<!-- <li>Japan (Ibaraki): <a href="ftp://ring.aist.go.jp/pub/lang/egcs">ring.aist.go.jp</a> !-->
+<!-- <li>Japan: <a href="ftp://ring.etl.go.jp/pub/lang/egcs">ring.etl.go.jp</a>
+<!-- <li>Japan (Tokyo): <a href="ftp://ring.asahi-net.or.jp/pub/lang/egcs">ring.asahi-net.or.jp</a> !-->
+<!-- <li>Japan: <a href="ftp://ring.crl.go.jp/pub/lang/egcs">ring.crl.go.jp</a> !-->
+<!-- <li>Japan (Tokyo): <a href="ftp://ring.so-net.ne.jp/pub/lang/egcs">ring.so-net.ne.jp</a> !-->
+<!-- <li>Japan: <a href="ftp://ring.jah.ne.jp/pub/lang/egcs">ring.jah.ne.jp</a> !-->
+<!-- <li>Japan: <a href="ftp://ring.astem.or.jp/pub/lang/egcs">ring.astem.or.jp</a> !-->
+<!-- <li>Japan: <a href="ftp://ring.saitama-u.ac.jp/pub/lang/egcs">ring.saitama-u.ac.jp</a> !-->
+<!-- <li>Japan: <a href="ftp://ring.nacsis.ac.jp/pub/lang/egcs">ring.nacsis.ac.jp</a> !-->
+<!-- <li>Japan: <a href="ftp://ring.exp.fujixerox.co.jp/pub/lang/egcs">ring.exp.fujixerox.co.jp</a> !-->
+<!-- <li>Japan: <a href="ftp://ring.ip-kyoto.ad.jp/pub/lang/egcs">ring.ip-kyoto.ad.jp</a> !-->
