--- a/htdocs/mirrors.html
+++ b/htdocs/mirrors.html
@@ -41,7 +41,6 @@ thanks to <a href="mailto:ktroulos@noc.ntua.gr">Costas Troulos</a>.
 <li>South Africa: <a href="ftp://ftp.sun.ac.za/sites/sourceware.cygnus.com/pub/gcc">ftp.sun.ac.za</a>
 <li>Australia: <a href="ftp://mirror.aarnet.edu.au/pub/egcs/">mirror.aarnet.edu.au</a>
 
-<li>Finland (no snapshots): <a href="ftp://ftp.funet.fi/mirrors/ftp.cygnus.com/pub/egcs">ftp.funet.fi</a>
 <li>Canada: <a href="ftp://ftp.crc.ca/pub/packages/egcs">ftp.crc.ca</a>
 <li>Russia: <a href="ftp://ftp.nc.orc.ru/pub/egcs">ftp.nc.orc.ru</a>
 <li>Russia (Moscow, no snapshots): <a href="ftp://linux.ihep.su/pub/cygnus/egcs">linux.ihep.su</a>
@@ -95,3 +94,4 @@ where the mirror is located.
 <!-- <li>Japan: <a href="ftp://ring.nacsis.ac.jp/pub/lang/egcs">ring.nacsis.ac.jp</a> !-->
 <!-- <li>Japan: <a href="ftp://ring.exp.fujixerox.co.jp/pub/lang/egcs">ring.exp.fujixerox.co.jp</a> !-->
 <!-- <li>Japan: <a href="ftp://ring.ip-kyoto.ad.jp/pub/lang/egcs">ring.ip-kyoto.ad.jp</a> !-->
+<!-- <li>Finland (no snapshots): <a href="ftp://ftp.funet.fi/mirrors/ftp.cygnus.com/pub/egcs">ftp.funet.fi</a> !-->
