--- a/htdocs/mirrors.html
+++ b/htdocs/mirrors.html
@@ -45,7 +45,7 @@ thanks to <a href="mailto:ktroulos@noc.ntua.gr">Costas Troulos</a>.
 <li>Russia: <a href="ftp://ftp.nc.orc.ru/pub/egcs">ftp.nc.orc.ru</a>
 <li>Russia (Moscow, no snapshots): <a href="ftp://linux.ihep.su/pub/cygnus/egcs">linux.ihep.su</a>
 <li>Hsin-Chu, Taiwan: <a href="ftp://ftp.cis.nctu.edu.tw/Languages/egcs">ftp.cis.nctu.edu.tw</a>, thanks to <a href="mailto:help@cis.nctu.edu.tw"> Henry Shieh</a>.
-<li>Turkey (Izmir): <a href="ftp://ftp://gcc.deu.edu.tr">gcc.deu.edu.tr</a>
+<li>Turkey (Izmir): <a href="ftp://gcc.deu.edu.tr">gcc.deu.edu.tr</a>
 </ul>
 
 <p>If you wish to host a new mirror site, please contact
