--- a/htdocs/mirrors.html
+++ b/htdocs/mirrors.html
@@ -43,7 +43,6 @@ thanks to <a href="mailto:ktroulos@noc.ntua.gr">Costas Troulos</a>.
 <li>Canada: <a href="ftp://ftp.crc.ca/pub/packages/egcs">ftp.crc.ca</a>
 <li>Russia: <a href="ftp://ftp.nc.orc.ru/pub/egcs">ftp.nc.orc.ru</a>
 <li>Russia (Moscow, no snapshots): <a href="ftp://linux.ihep.su/pub/cygnus/egcs">linux.ihep.su</a>
-<li>Hsin-Chu, Taiwan: <a href="ftp://ftp.cis.nctu.edu.tw/Languages/egcs">ftp.cis.nctu.edu.tw</a>, thanks to <a href="mailto:help@cis.nctu.edu.tw"> Henry Shieh</a>.
 <li>Turkey (Izmir): <a href="ftp://gcc.deu.edu.tr">gcc.deu.edu.tr</a>
 </ul>
 
@@ -95,3 +94,4 @@ where the mirror is located.
 <!-- <li>Japan: <a href="ftp://ring.ip-kyoto.ad.jp/pub/lang/egcs">ring.ip-kyoto.ad.jp</a> !-->
 <!-- <li>Finland (no snapshots): <a href="ftp://ftp.funet.fi/mirrors/ftp.cygnus.com/pub/egcs">ftp.funet.fi</a> !-->
 <!-- <LI>Germany: <A HREF="ftp://ftp.mpi-sb.mpg.de/pub/gnu/mirror/egcs.cygnus.com/egcs/">ftp.mpi-sb.mpg.de</a> !-->
+<!-- <li>Hsin-Chu, Taiwan: <a href="ftp://ftp.cis.nctu.edu.tw/Languages/egcs">ftp.cis.nctu.edu.tw</a>, thanks to <a href="mailto:help@cis.nctu.edu.tw"> Henry Shieh</a>. !-->
