--- a/htdocs/mirrors.html
+++ b/htdocs/mirrors.html
@@ -43,7 +43,7 @@ thanks to <a href="mailto:ktroulos@noc.ntua.gr">Costas Troulos</a>.
 <li>Canada: <a href="ftp://ftp.crc.ca/pub/packages/egcs">ftp.crc.ca</a>
 <li>Russia: <a href="ftp://ftp.nc.orc.ru/pub/egcs">ftp.nc.orc.ru</a>
 <li>Russia (Moscow, no snapshots): <a href="ftp://linux.ihep.su/pub/cygnus/egcs">linux.ihep.su</a>
-<li>Turkey (Izmir): <a href="ftp://gcc.deu.edu.tr">gcc.deu.edu.tr</a>
+<li>Turkey (Izmir): <a href="ftp://gcc.deu.edu.tr/pub/egcs">gcc.deu.edu.tr</a>
 </ul>
 
 <p>If you wish to host a new mirror site, please contact
