Have the link to the list subscribe/unsubscribe cgi-bin include the full server name as not to break mirror sites.

--- a/htdocs/lists.html
+++ b/htdocs/lists.html
@@ -90,7 +90,7 @@ the search function, send a copy to
 lists via this form:
 
 <blockquote>
-<form method="get" action="/cgi-bin/ml-request">
+<form method="get" action="http://gcc.gnu.org/cgi-bin/ml-request">
   Mailing list: 
   <select name="listname">
    <option value="gcc-announce">gcc-announce
@@ -159,7 +159,7 @@ can do right now.
 <p><a href="/">Return to the gcc home page</a>
 
 <hr>
-<p><i>Last modified:  October 12, 1999</i>
+<p><i>Last modified:  October 25, 1999</i>
 
 </body>
 </html>
