--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -40,15 +40,15 @@
 </P>
 <H2>Download</H2>
 <P>
-<A HREF="ftp://egcs.cygnus.com/pub/egcs/releases/index.html">Releases</A><BR>
-<A HREF="ftp://egcs.cygnus.com/pub/egcs/snapshots/index.html">Snapshots</A><BR>
+<A HREF="ftp://gcc.gnu.org/pub/egcs/releases/index.html">Releases</A><BR>
+<A HREF="ftp://gcc.gnu.org/pub/egcs/snapshots/index.html">Snapshots</A><BR>
 <A HREF="mirrors.html">Mirror sites</A>
 </P>
 
 <HR>
 
 <P><SMALL>
-<FORM METHOD="get" ACTION="http://egcs.cygnus.com/cgi-bin/ml-request">
+<FORM METHOD="get" ACTION="http://gcc.gnu.org/cgi-bin/ml-request">
   Get our announcements:<BR>
   <INPUT TYPE="hidden" NAME="digest"    VALUE="off">
   <INPUT TYPE="hidden" NAME="operation" VALUE="subscribe">
@@ -85,7 +85,7 @@ with weekly snapshots and anonymous CVS.  All code continues to be <a
 href="contribute.html">assigned to the FSF</a> exactly as before.</p>
 
 <p>We will provide regular, high quality 
-<a href="ftp://egcs.cygnus.com/pub/egcs/releases/index.html">releases</a>.
+<a href="ftp://gcc.gnu.org/pub/egcs/releases/index.html">releases</a>.
 We want those releases to work well on a variety of native (including
 GNU/Linux) and cross targets and use an extensive <a href="testresults/">test
 suite</a> as well as a <a href="benchresults/">benchmark suite</a> to
