--- a/htdocs/mirrors.html
+++ b/htdocs/mirrors.html
@@ -24,6 +24,7 @@ if you are mirroring the GCC pages so we can note it here!
 <li>Czech Republic: <a href="ftp://sunsite.mff.cuni.cz/pub/GNU/egcs/">sunsite.mff.cuni.cz</a>
 <li>Czech Republic: <a href="ftp://ftp.gts.cz/pub/MIRRORS/ftp.cygnus.com/pub/egcs/">ftp.gts.cz</a>
 <LI><A HREF="ftp://sunsite.ms.mff.cuni.cz/GNU/egcs/">CZECH REPUBLIC: SunSITE</A>, thanks to <A HREF="mailto:jj@sunsite.mff.cuni.cz">Jakub Jelinek</A>!<BR>
+<li>Denmark: <a href="ftp://sunsite.auc.dk/pub/egcs/">sunsite.auc.dk</a> 
 <LI>Germany (Berlin): <A HREF="ftp://ftp.fu-berlin.de/unix/languages/egcs/">Germany: ftp.fu-berlin.de </A>, thanks to <A HREF="mailto:leitner@math.fu-berlin.de">Felix von Leitner</A>!
 <LI>Germany: <A HREF="ftp://ftp.gwdg.de/pub/cygnus/egcs/">ftp.gwdg.de</a>
 <LI>Germany: <A HREF="ftp://ftp.uni-trier.de/pub/languages/c/implementation/egcs/">ftp.uni-trier.de</a>
@@ -72,7 +73,6 @@ where the mirror is located.
 <!-- <LI><A HREF="ftp://linux.cis.nctu.edu.tw/pub/packages/pcg/egcs/">TAIWAN: linux.cis.nctu.edu.tw</A>, thanks to <A HREF="http://www.cis.nctu.edu.tw/~is83120/">Aiken Sam</A>!<BR>! -->
 <!-- <li>UK: <a href="ftp://sunsite.doc.ic.ac.uk/Mirrors/egcs.cygnus.com/pub/egcs/">sunsite.doc.ic.ac.uk</a> !-->
 <!-- <li>France: <a href="ftp://ftp.grolier.fr/pub/egcs//">ftp.grolier.fr</a> !-->
-<!-- <li>Denmark: <a href="ftp://sunsite.auc.dk/pub/egcs/">sunsite.auc.dk</a> !-->
 <!-- <LI>Poland (Warsaw): <A HREF="ftp://sunsite.icm.edu.pl/pub/programming/egcs/">sunsite.icm.edu.pl</a> !-->
 <!-- <LI>Sweden: <A HREF="ftp://ftp.lysator.liu.se/mirror/unix/egcs/">ftp.lysator.liu.se</a> !-->
 <!-- <LI>Portugal: <A HREF="ftp://ftp.lca.uevora.pt/pub/egcs">ftp.lca.uevora.pt</a> !-->
