--- a/htdocs/mirrors.html
+++ b/htdocs/mirrors.html
@@ -15,6 +15,7 @@ if you are mirroring the GCC pages so we can note it here!
 
 <ul>
 <li>US (California): <a href="ftp://ftp.yggdrasil.com/mirrors/site/egcs.cygnus.com/pub/egcs">ftp.yggdrasil.com</a>
+<!-- <li>US (Arizona): <a href="ftp://ftp.ninemoons.com/pub/mirrors/egcs/">ftp.ninemoons.com</a> !-->
 <li>Austria: <a href="ftp://gd.tuwien.ac.at/gnu/egcs/">gd.tuwien.ac.at</a>
 <li>UK: <a href="ftp://unix.hensa.ac.uk/mirrors/egcs.cygnus.com/pub/egcs/">unix.hensa.ac.uk</a> 
 <li>France: <a href="ftp://ftp.ilog.fr/pub/Mirrors/gcc/">ftp.ilog.fr</a>
@@ -25,6 +26,7 @@ if you are mirroring the GCC pages so we can note it here!
 <li>Czech Republic: <a href="ftp://sunsite.mff.cuni.cz/pub/GNU/egcs/">sunsite.mff.cuni.cz</a>
 <li>Czech Republic: <a href="ftp://ftp.gts.cz/pub/MIRRORS/ftp.cygnus.com/pub/egcs/">ftp.gts.cz</a>
 <LI><A HREF="ftp://sunsite.ms.mff.cuni.cz/GNU/egcs/">CZECH REPUBLIC: SunSITE</A>, thanks to <A HREF="mailto:jj@sunsite.mff.cuni.cz">Jakub Jelinek</A>!<BR>
+<LI>Poland (Warsaw): <A HREF="ftp://sunsite.icm.edu.pl/pub/programming/egcs/">sunsite.icm.edu.pl</a>
 <li>Denmark: <a href="ftp://sunsite.auc.dk/pub/egcs/">sunsite.auc.dk</a> 
 <LI>Germany (Berlin): <A HREF="ftp://ftp.fu-berlin.de/unix/languages/egcs/">Germany: ftp.fu-berlin.de </A>, thanks to <A HREF="mailto:leitner@math.fu-berlin.de">Felix von Leitner</A>!
 <LI>Germany: <A HREF="ftp://ftp.gwdg.de/pub/cygnus/egcs/">ftp.gwdg.de</a>
@@ -33,14 +35,20 @@ if you are mirroring the GCC pages so we can note it here!
 <LI>Norway: <a href="ftp://ftp.pvv.ntnu.no/pub/egcs">ftp.pvv.ntnu.no</a>
 <LI>Poland: <A HREF="ftp://ftp.task.gda.pl/mirror/egcs.cygnus.com/pub/egcs">ftp.task.gda.pl</a>
 <LI>Sweden: <A HREF="ftp://ftp.sunet.se/pub/gnu/egcs/">ftp.sunet.se</a>
+<LI>Sweden: <A HREF="ftp://ftp.lysator.liu.se/mirror/unix/egcs/">ftp.lysator.liu.se</a>
+<LI>Sweden: <A HREF="ftp://ftp.lysator.liu.se/mirror/unix/egcs/">ftp.lysator.liu.se</a>
 <LI>Sweden: <A HREF="ftp://ftp.chl.chalmers.se/pub/egcs/">ftp.chl.chalmers.se</a>
 <LI>Brasil (releases only, no snapshots): <A HREF="ftp://ftp.unicamp.br/pub/gnu/=EXTRA=/cygnus/egcs/">ftp.unicamp.br</a>
+<LI>Portugal: <A HREF="ftp://ftp.lca.uevora.pt/pub/egcs">ftp.lca.uevora.pt</a>
 <LI>Romania: <A HREF="ftp://ftp.lbi.ro/mirrors/ftp.cygnus.com/pub/egcs">ftp.lbi.ro</a>, thanks to <a href="mailto:tim@lbi.ro">Surdu Bogdan</a>!
 <LI>Athens, Greece: <a href="ftp://ftp.ntua.gr/pub/gnu//egcs/">ftp.ntua.gr</a>,
 thanks to <a href="mailto:ktroulos@noc.ntua.gr">Costas Troulos</a>.
 <LI>Tokyo, Japan: <A HREF="ftp://ftp.dti.ad.jp/pub/lang/egcs">ftp.dti.ad.jp</a>, thanks to <a href="mailto:ftp-admin@dti.ad.jp">IWAIZAKO Takahiro</a>!
 <li>Japan: <a href="ftp://sysg.kek.jp/cygnus/egcs">sysg.kek.jp</a>
 <li>Japan: <a href="ftp://ftp.eos.hokudai.ac.jp/pub/egcs">ftp.eos.hokudai.ac.jp</a>
+<li>Japan: <a href="ftp://ftp.lab.kdd.co.jp/lang/egcs">ftp.lab.kdd.co.jp</a>
+<li>Japan: <a href="ftp://ftp.shonan.bunkyo.ac.jp/pub/lang/egcs">ftp.shonan.bunkyo.ac.jp</a>
+<LI>Japan: <A HREF="ftp://ftp.iij.ad.jp/pub/egcs">ftp.iij.ad.jp</a>
 <LI>Taiwan <a href="ftp://ftp1.sinica.edu.tw/pub3/CYGNUS/gcc/">TAIWAN: ftp1.sinica.edu.tw</a>
 <li>South Africa: <a href="ftp://ftp.sun.ac.za/sites/sourceware.cygnus.com/pub/gcc">ftp.sun.ac.za</a>
 <li>Australia: <a href="ftp://mirror.aarnet.edu.au/pub/egcs/">mirror.aarnet.edu.au</a>
@@ -72,17 +80,10 @@ where the mirror is located.
 <!-- <LI><A HREF="ftp://linux.colba.net/pub/pcg/egcs/">CANADA: linux.colba.net (Montreal) (snapshots only)</A>, thanks to <A HREF="mailto:draggy@kosmic.org">Nicolas St-Pierre</A>!<BR> -->
 <!-- <LI><A HREF="ftp://linux.cis.nctu.edu.tw/pub/packages/pcg/egcs/">TAIWAN: linux.cis.nctu.edu.tw</A>, thanks to <A HREF="http://www.cis.nctu.edu.tw/~is83120/">Aiken Sam</A>!<BR>! -->
 <!-- <li>UK: <a href="ftp://sunsite.doc.ic.ac.uk/Mirrors/egcs.cygnus.com/pub/egcs/">sunsite.doc.ic.ac.uk</a> !-->
-<!-- <LI>Poland (Warsaw): <A HREF="ftp://sunsite.icm.edu.pl/pub/programming/egcs/">sunsite.icm.edu.pl</a> !-->
-<!-- <LI>Sweden: <A HREF="ftp://ftp.lysator.liu.se/mirror/unix/egcs/">ftp.lysator.liu.se</a> !-->
-<!-- <LI>Portugal: <A HREF="ftp://ftp.lca.uevora.pt/pub/egcs">ftp.lca.uevora.pt</a> !-->
 <!-- <LI>Nijmegen, Netherlands: <A HREF="ftp://ftp.nluug.nl/pub/languages/egcs">ftp.nluug.nl</a>, thanks to <a href="mailto:jc@ATComputing.nl">Jan Cristiaan van Winkel</a>! !-->
 <!-- <li>Japan: <a href="ftp://ftp.win.or.jp/pub/lang/egcs">ftp.win.or.jp</a> !-->
-<!-- <li>Japan: <a href="ftp://ftp.lab.kdd.co.jp/lang/egcs">ftp.lab.kdd.co.jp</a> !-->
-<!-- <li>Japan: <a href="ftp://ftp.shonan.bunkyo.ac.jp/pub/lang/egcs">ftp.shonan.bunkyo.ac.jp</a> !-->
 <!-- <li>Russia (Moscow, partial):<a href="ftp://kiarchive.relcom.ru/pub/gnu/egcs/">kiarchive.relcom.ru</a> !-->
-<!-- <li>US (Arizona): <a href="ftp://ftp.ninemoons.com/pub/mirrors/egcs/">ftp.ninemoons.com</a> !-->
 <!--<li>US (Stanford): <a href="ftp://go.cygnus.com/pub/sourceware.cygnus.com/pub/egcs/">go.cygnus.com</a> !-->
-<!-- <LI>Japan: <A HREF="ftp://ftp.iij.ad.jp/pub/egcs">ftp.iij.ad.jp</a> !-->
 <!-- <li>Japan (Ibaraki): <a href="ftp://ring.aist.go.jp/pub/lang/egcs">ring.aist.go.jp</a> !-->
 <!-- <li>Japan: <a href="ftp://ring.etl.go.jp/pub/lang/egcs">ring.etl.go.jp</a>
 <!-- <li>Japan (Tokyo): <a href="ftp://ring.asahi-net.or.jp/pub/lang/egcs">ring.asahi-net.or.jp</a> !-->
