--- a/htdocs/mirrors.html
+++ b/htdocs/mirrors.html
@@ -58,7 +58,7 @@ thanks to <a href="mailto:ktroulos@noc.ntua.gr">Costas Troulos</a>.
 
 <p>If you wish to host a new mirror site, please contact
 <a href="mailto:gcc@gcc.gnu.org">gcc@gcc.gnu.org</a>.  Include the
-name of the ftp server, the path to the GC mirror and the country/city
+name of the ftp server, the path to the GCC mirror and the country/city
 where the mirror is located.
 
 <p><a href="index.html">Return to the GCC home page</a>
