gcc-2.95.2 release related stuff

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -86,7 +86,7 @@ We want those releases to work well on a variety of native (including
 GNU/Linux) and cross targets and use an extensive <a href="testresults/">test
 suite</a> as well as a <a href="benchresults/">benchmark suite</a> to
 maintain and improve quality.
-<a href="gcc-2.95/gcc-2.95.1.html">GCC 2.95.1</a> is the current release.
+<a href="gcc-2.95/gcc-2.95.2.html">GCC 2.95.2</a> is the current release.
 <hr>
 
 
@@ -100,6 +100,11 @@ maintain and improve quality.
 <h2>News/Announcements</h2>
 
 <dl>
+
+<dt><b>October 27, 1999</b></dt>
+<dd>
+<a href="gcc-2.95/gcc-2.95.2.html">GCC 2.95.2 is released</a>.
+</dd>
 
 <dt><b>October 16, 1999</b></dt>
 <dd>
@@ -117,25 +122,6 @@ of g77, available at his
 
 <p>If you are interested in helping with g77, please <a
 href="mailto:gcc@gcc.gnu.org?subject=g77%20Help%20Wanted?">contact us</a>!</p>
-</dd>
-
-<dt><b>October 12, 1999</b></dt>
-<dd>
-We are pleased to annouce Richard Earnshaw and Jason Merrill have been
-given global write permissions throughout the GCC sources.
-</dd>
-
-<dd>
-<a href="http://www.cygnus.com">Cygnus</a> has installed 
-<a href="news/server.html">various upgrades</a> to improve services
-for GCC and other open source projects hosted by Cygnus.
-</dd>
-
-<dt><b>October 11, 1999</b></dt>
-<dd>
-The gcc <a href="steering.html">steering committee</a> welcomes a new
-member: Gerald Pfeifer. His insights into political issues and his web
-improvement work were and will be of great use.
 </dd>
 
 </dl>
