--- a/htdocs/news.html
+++ b/htdocs/news.html
@@ -10,6 +10,25 @@ home page</a>.
 
 <dl>
 
+<dt><b>October 12, 1999</b></dt>
+<dd>
+We are pleased to annouce Richard Earnshaw and Jason Merrill have been
+given global write permissions throughout the GCC sources.
+</dd>
+
+<dd>
+<a href="http://www.cygnus.com">Cygnus</a> has installed
+<a href="news/server.html">various upgrades</a> to improve services
+for GCC and other open source projects hosted by Cygnus.
+</dd>
+
+<dt><b>October 11, 1999</b></dt>
+<dd>
+The gcc <a href="steering.html">steering committee</a> welcomes a new
+member: Gerald Pfeifer. His insights into political issues and his web
+improvement work were and will be of great use.
+</dd>
+
 <dt><b>September 21, 1999</b></dt>
 <dd>
 Nick Clifton of Cygnus Solutions has donated support for the Fujitsu
