Add new mirror in Brasil.

--- a/htdocs/mirrors.html
+++ b/htdocs/mirrors.html
@@ -16,6 +16,7 @@ if you are mirroring the GCC pages so we can note it here!
 <ul>
 <li>Australia: <a href="ftp://mirror.aarnet.edu.au/pub/egcs/">mirror.aarnet.edu.au</a>
 <li>Austria: <a href="ftp://gd.tuwien.ac.at/gnu/egcs/">gd.tuwien.ac.at</a>
+<LI>Brasil: <a href="ftp://ftp.softaplic.com.br/pub/sourceware/gcc">ftp.softaplic.com.br</a>
 <LI>Brasil (releases only, no snapshots): <A HREF="ftp://ftp.unicamp.br/pub/gnu/=EXTRA=/cygnus/egcs/">ftp.unicamp.br</a>
 <li>Canada: <a href="ftp://ftp.crc.ca/pub/packages/egcs">ftp.crc.ca</a>
 <li>Czech Republic: <a href="ftp://sunsite.mff.cuni.cz/pub/GNU/egcs/">sunsite.mff.cuni.cz</a>
