patch for GCC 2.95.2 on i?86-pc-solaris* with GNU as

--- a/htdocs/install/specific.html
+++ b/htdocs/install/specific.html
@@ -17,6 +17,7 @@
   <li><a href="#hppa*-hp-hpux10">hppa*-hp-hpux10</a></li>
   <li><a href="#ix86-*-linux*">i?86-*-linux*</a></li>
   <li><a href="#ix86-*-sco3.2v5*">i?86-*-sco3.2v5*</a></li>
+  <li><a href="#ix86-*-solaris*">i?86-*-solaris*</a></li>
   <li><a href="#ix86-*-udk">i?86-*-udk</a></li>
   <li><a href="#*-ibm-aix*">*-ibm-aix*</a></li>
   <li><a href="#m68k-*-nextstep*">m68k-*-nextstep*</a></li>
@@ -256,6 +257,16 @@ GCC.  Affected faults, when analyzed in a debugger, will show a stack
 backtrace with a fault occurring in <code>rtld()</code> and the program
 running as <code>/usr/lib/ld.so.1</code>.  This problem has been reported to SCO engineering
 and will hopefully be addressed in later releases.</p>
+
+
+<hr>
+<h3><a name="ix86-*-solaris*">i?86-*-solaris*</a></h3>
+
+<p>GCC 2.95.2, when configured to use the GNU assembler, would invoke
+it with the <code>-s</code> switch, that GNU as up to 2.9.5.0.12 does
+not support.  If you'd rather not use a newer GNU as nor the native
+assembler, you'll need the patch <a
+href="x86-sol2-gas.patch"><code>`x86-sol2-gas.patch'</code></a>.</p>
 
 
 <hr>
