--- a/htdocs/searchbox.html
+++ b/htdocs/searchbox.html
@@ -7,8 +7,9 @@ all the publicly available WWW documents at this site.
 <font size=-1>
 
 Match: <select name="method">
-<option value="and">All</option>
-<option value="or">Any</option>
+<option value="and">All words</option>
+<option value="or">Any word</option>
+<option value="boolean">Boolean expression</option>
 </select>
 
 Format: <select name="format">
@@ -22,12 +23,12 @@ Limit to: <select name="exclude">
 </select>
 
 Sort by: <select name="sort">
-<option value="score">Score</option>
-<option value="time">Time</option>
-<option value="title">Title</option>
-<option value="revscore">Reverse Score</option>
-<option value="revtime">Reverse Time</option>
-<option value="revtitle">Reverse Title</option>
+<option value="score">Best Match</option>
+<option value="time">Newest</option>
+<option value="title">Title A-Z</option>
+<option value="revscore">Worst Match</option>
+<option value="revtime">Oldest</option>
+<option value="revtitle">Title Z-A</option>
 </select>
 
 </font>
