--- a/htdocs/gcc-2.95/buildstat.html
+++ b/htdocs/gcc-2.95/buildstat.html
@@ -113,6 +113,9 @@ Successful
 <p><b>mipsel-unknown-linux-gnu</b><br>
 Un-successful.  Needs tweaks to gcc/mips/linux.h
 
+<p><b>powerpc-ibm-aix4.2.1.0</b><br>
+Successful
+
 <p><b>powerpc-ibm-aix4.3.2.0</b><br>
 Successful
 
@@ -154,7 +157,7 @@ Successful
 
 <hr>
 <p>
-<i>Last modified on October 9, 1999.</i>
+<i>Last modified on October 30, 1999.</i>
 
 </body>
 </html>
