--- a/htdocs/gcc-2.95/buildstat.html
+++ b/htdocs/gcc-2.95/buildstat.html
@@ -86,6 +86,9 @@ Successful
 <p><b>i586-pc-linux-gnu</b><br>
 Successful
 
+<p><b>i586-pc-linux-gnulibc1</b><br>
+Successful
+
 <p><b>i586-pc-sco3.2v5.0.5</b><br>
 Successful
 
