Various tweaks, egcs vs GCC cleanup. By Richard Stallman <rms@gnu.org>.

--- a/htdocs/contribute.html
+++ b/htdocs/contribute.html
@@ -1,14 +1,14 @@
 <html>
 <head>
-<title>Contributing</title>
+<title>Contributing to GCC</title>
 </head>
 
 <body>
-<h1 align="center">Contributing</h1>
+<h1 align="center">Contributing to GCC</h1>
 
 <p>We strongly encourage contributions of code, bugfixes, new
 optimizations, new features, documentation updates, web page
-improvements, etc.</p>
+improvements, etc. for GCC</p>
 
 <p>There are certain legal requirements and style issues which all
 contributions must meet.</p>
@@ -26,22 +26,23 @@ contributions must meet.</p>
   copyright assignment form filled out.
 
   <ul>
-   <li>If you've developed some addition or patch to egcs
+   <li>If you've developed some addition or patch to GCC
    that you would like to contribute, you should fill out a <a
    href="fsf-forms/assignment-instructions.html">copyright assignment
    form</a> and send it in to the FSF.  We are unable to use code from
    you until this is on-file at the FSF, so get that paperwork in!
+   <P>
+   This form covers one batch of changes.
 
-   <li>The above form is for a one-time change submission; you can
-   fill out a different assignment to give all future copyrights
-   (for a particular program) to the Free Software Foundation.
-   If you think you're going to be doing continuing work on egcs
-   (including gcc, g++, g77, Objective C, libstdc++, etc.),
-   it will be easiest if you can fill out this form, called <a
+   <li>
+   If you think you're going to be doing continuing work on GCC
+   (including gcc, g++, g77, Objective C, libstdc++, etc.), it would
+   be easier to use a different form, which arranges to assign the
+   copyright for all your future changes to GCC.  It is called <a
    href="fsf-forms/assign.future">assign.future</a>.  Please note that
    if you switch employers, the new employer will need to fill out the
-   <a href=fsf-forms/disclaim.future>disclaim.future</a> form; there is
-   no need to fill out the assign.future form again.
+   <a href=fsf-forms/disclaim.future>disclaim.future</a> form; there
+   is no need to fill out the assign.future form again.
 
    <li>There are several <a href="fsf-forms/copyrights.html">other forms
    you can fill out</a> for different circumstances (e.g. to contribute
@@ -52,16 +53,13 @@ contributions must meet.</p>
    on file.
 
    <li>This is pretty confusing!  If you are unsure of what is necessary,
-   just ask the <tt>egcs</tt> mailing list and we'll figure out what is best
+   just ask the <tt>GCC</tt> mailing list and we'll figure out what is best
    for you.
   </ul>
 
   <p>Note:  Many of these forms have a place for &quot;name of program&quot;.
-  Insert the name of <b>one</b> program in that place, &quot;gcc&quot;,
-  &quot;g77&quot;, &quot;libstdc++&quot;, etc.  Do <b>not</b> write
-  &quot;egcs&quot; in that location.  If you use &quot;egcs&quot; or multiple
-  program names, the FSF will reject the assignment and we won't be able to
-  use your contribution.
+  Insert the name of <b>one</b> program in that place--in this case,
+  &quot;gcc&quot;.
 
 <h2>Submitting Patches</h2>
 
@@ -92,10 +90,10 @@ contributions must meet.</p>
   mailinglist.
 
 <hr>
-<i>Last modified on July  1, 1999.</i>
+<i>Last modified on November 1, 1999.</i>
 
 <hr>
-<a href="">Return to the egcs home page</a>
+<a href="">Return to the GNU home page</a>
 
 </body>
 </html>
