Change 1.1 to 1.1.x (suggested by Brad Garcia <bgarcia@fore.com>)

--- a/htdocs/gcc-2.95/caveats.html
+++ b/htdocs/gcc-2.95/caveats.html
@@ -47,7 +47,7 @@
   versions of g++) may no longer be accepted.  The flag -fpermissive may
   allow some non-conforming code to compile with GCC 2.95.
 
-  <li>GCC 2.95 compiled C++ code is not binary compatible with EGCS 1.1,
+  <li>GCC 2.95 compiled C++ code is not binary compatible with EGCS 1.1.x,
   EGCS 1.0.x or GCC 2.8.x.
 
   <li>GCC 2.95 does not have changes from the GCC 2.8 tree that were made
