Replace all references to GIFs by references to JPEG and PNG files. Add htdig.jpg.

--- a/htdocs/htdig/footer.html
+++ b/htdocs/htdig/footer.html
@@ -2,5 +2,5 @@ $(PAGEHEADER)
 $(PREVPAGE) $(PAGELIST) $(NEXTPAGE)
 <hr noshade size=4>
 <a href="http://www.htdig.org">
-<img src="/htdig/htdig.gif" border=0>ht://Dig $(VERSION)</a>
+<img src="/htdig/htdig.jpeg" border=0>ht://Dig $(VERSION)</a>
 </body></html>
