--- a/htdocs/htdig/header.html
+++ b/htdocs/htdig/header.html
@@ -1,6 +1,6 @@
 <html><head><title>Search results for '$(WORDS)'</title></head>
 <body bgcolor="#eef7ff">
-<h2><img src="/htdig/htdig.gif">
+<h2><img src="/htdig/htdig.jpeg">
 Search results for '$(LOGICAL_WORDS)'</h2>
 <hr noshade size=4>
 <form method="get" action="$(CGI)">
@@ -20,6 +20,6 @@ Refine search:
 </form>
 <hr noshade size=1>
 <b>Documents $(FIRSTDISPLAYED) - $(LASTDISPLAYED) of $(MATCHES) matches.
-More <img src="/htdig/star.gif" alt="*">'s indicate a better match.
+More <img src="/htdig/star.png" alt="*">'s indicate a better match.
 </b>
 <hr noshade size=1>
