--- a/htdocs/htdig/nomatch.html
+++ b/htdocs/htdig/nomatch.html
@@ -1,6 +1,6 @@
 <html><head><title>No match for '$(LOGICAL_WORDS)'</title></head>
 <body bgcolor="#eef7ff">
-<h1><img src="/htdig/htdig.gif">
+<h1><img src="/htdig/htdig.jpeg">
 Search results</h1>
 <hr noshade size=4>
 <h2>No matches were found for '$(LOGICAL_WORDS)'</h2>
@@ -33,5 +33,5 @@ Refine search:
 </form>
 <hr noshade size=4>
 <a href="http://www.htdig.org/">
-<img src="/htdig/htdig.gif" border=0>ht://Dig $(VERSION)</a>
+<img src="/htdig/htdig.jpeg" border=0>ht://Dig $(VERSION)</a>
 </body></html>
