--- a/htdocs/htdig/syntax.html
+++ b/htdocs/htdig/syntax.html
@@ -1,6 +1,6 @@
 <html><head><title>Error in Boolean search for '$(WORDS)'</title></head>
 <body bgcolor="#eef7ff">
-<h1><img src="/htdig/htdig.gif">
+<h1><img src="/htdig/htdig.jpeg">
 Error in Boolean search for '$(LOGICAL_WORDS)'</h1>
 <hr noshade size=4>
 Boolean expressions need to be 'correct' in order for the search
@@ -30,6 +30,6 @@ Refine search:
 </form>
 <hr noshade size=4>
 <a href="http://www.htdig.org/">
-<img src="/htdig/htdig.gif" border=0>ht://Dig $(VERSION)</a>
+<img src="/htdig/htdig.jpeg" border=0>ht://Dig $(VERSION)</a>
 </body></html>
 
