New URLs for binutils.  Fix typo.  egcs->gcc in snapshot tag names

--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -386,7 +386,7 @@ flags such as <code>-R</code> or <code>-rpath</code>, depending on
 platform and linker, to the <code>*link</code> or <code>*lib</code>
 specs.</p>
 
-<p>Another alterative is to install a wrapper script around gcc, g++
+<p>Another alternative is to install a wrapper script around gcc, g++
 or ld that adds the appropriate directory to the environment variable
 <code>LD_RUN_PATH</code> or equivalent (again, it's
 platform-dependent).</p>
@@ -526,9 +526,12 @@ buggy assembler.  Releases of binutils prior to 2.9 are known to
 assemble exception handling code incorrectly.</p>
 
 <p>We recommend binutils-2.9.1 or newer.  Some post-2.9.1 snapshots of
-binutils fix some subtle bugs, particularly on x86 and alpha.  They
-are available at <a href="ftp://tsx-11.mit.edu/pub/linux/packages/GCC/">
-ftp://tsx-11.mit.edu/pub/linux/packages/GCC/</A>.  The 2.9.1.0.15
+binutils fix some subtle bugs, particularly on x86 and alpha.
+Development snapshots and releases are available at <a
+href="ftp://ftp.valinux.com/pub/support/hjl/binutils/">
+ftp://ftp.valinux.com/pub/support/hjl/binutils/</a> and <a
+href="http://sourceware.cygnus.com/binutils/">
+http://sourceware.cygnus.com/binutils/</a>.  The old 2.9.1.0.15
 snapshot is known to work fine on those platforms; other than that, be
 aware that snapshots are in general untested and may not work (or even
 build).  Use them at your own risk.</p>
@@ -1027,7 +1030,7 @@ ftp://agnes.dida.physik.uni-essen.de/gnu-pascal/beta/</A>.</p>
 out the latest snapshot.</p>
 
 <p>We use CVS tags to identify each snapshot we make.  Snapshot tags have
-the form "egcs_ss_YYYYMMDD".  In addition, the latest official snapshot always
+the form "gcc_ss_YYYYMMDD".  In addition, the latest official snapshot always
 has the tag "gcc_latest_snapshot".</p>
 
 
@@ -1139,7 +1142,7 @@ is declared pure-virtual [class.dtor]/7.</p>
 <hr>
 
 <p><a href="index.html">Return to the GCC home page</a></p>
-<p><i>Last modified:  October 19, 1999</i></p>
+<p><i>Last modified:  November 2, 1999</i></p>
 
 </body>
 </html>
