--- a/htdocs/gccmission.html
+++ b/htdocs/gccmission.html
@@ -7,13 +7,15 @@
 
 <h1 align="center">GCC Development Mission Statement (1999-04-22)</h1>
 
-<p>GCC development is a part of the GNU Project, aiming to improve
-the compiler used in the GNU system including the GNU/Linux variant.  The
-GCC development effort uses an open development environment and supports
-many other platforms in order to foster a world-class, optimizing
-compiler, to attract a larger team of developers, to ensure that GCC and
-the GNU system work on multiple architectures and diverse environments,
-and to more thoroughly test and extend the features of GCC.</p>
+<p>GCC development is a part of the <a href="http://www.gnu.org/">GNU
+Project</a>, aiming to improve the compiler used in the GNU system
+including the GNU/Linux variant.
+The GCC development effort uses an open development environment and
+supports many other platforms in order to foster a world-class,
+optimizing compiler, to attract a larger team of developers, to ensure
+that GCC and the GNU system work on multiple architectures and diverse
+environments, and to more thoroughly test and extend the features of
+GCC.</p>
 
 <h2>Free Software Project</h2>
 
@@ -58,16 +60,16 @@ and to more thoroughly test and extend the features of GCC.</p>
 <li>Developer friendly tools and procedures (i.e., cvs, multiple
     maintainers, etc).
 <li>Conflicts of interest exist for many GCC developers; the
-    developers as well as the GCC Steering Committee will not allow
-    those conflicts of interest to have an effect on the GCC
-    development.
+    developers as well as the <a href="steering.html">GCC Steering
+    Committee</a> will not allow those conflicts of interest to have an
+    effect on the GCC development.
 </ul>
 
 <hr>
 <address>
 <a href="about.html">The GCC team</a>
 <br>
-<small><i>Last modified on April 23, 1999.</i></small>
+<small><i>Last modified on November 2, 1999.</i></small>
 </address>
 
 </body>
