--- a/htdocs/lists.html
+++ b/htdocs/lists.html
@@ -77,10 +77,12 @@ and try to avoid cross posting a message to several lists.
 plus you can also <a href="ftp://egcs.cygnus.com/pub/gcc/mail-archives/">
 download mbox formatted archives of each mailing list</a>.
 
-<p>A <a href="http://bitrange.com/gcc/search.html">search engine</a>
-for the web archives is currently hosted at
-<a href="http://bitrange.com/">BitRange.com</a>. If you have comments about
-the search function, send a copy to
+<p>The web archives are <a href="#searchbox">searchable</a> for
+messages from the beginning of 1999 and on.
+A <a href="http://bitrange.com/gcc/search.html">backup search
+engine</a> that includes 1997 and 1998, is currently hosted at
+<a href="http://bitrange.com/">BitRange.com</a>. If you have
+comments about the search function, please send a copy to
 <a href="mailto:hp@bitrange.com">hp@bitrange.com</a>.
 
 
@@ -156,10 +158,13 @@ addresses or omitting addresses altogether, there isn't a whole lot we
 can do right now.
 
 <hr>
+<a name="searchbox">
+<!--#include virtual="/searchbox.html"-->
+</a>
 <p><a href="/">Return to the gcc home page</a>
 
 <hr>
-<p><i>Last modified:  October 25, 1999</i>
+<p><i>Last modified:  October 31, 1999</i>
 
 </body>
 </html>
