--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -28,7 +28,7 @@
 <P>
 <A HREF="contribute.html">Contributing</A><BR>
 <A HREF="projects.html">Open projects</A><BR>
-<A HREF="egcstensions.html">Egcstensions</A><BR>
+<A HREF="extensions.html">Extensions</A><BR>
 <A HREF="cvs.html">CVS read access</A><BR>
 <A HREF="cvswrite.html">CVS write access</A><BR>
 <A HREF="checkin.html">Policies/Procedures</A>
@@ -138,7 +138,7 @@ href="mailto:gcc@gcc.gnu.org?subject=g77%20Help%20Wanted?">contact us</a>!</p>
 <address>
 <a href="about.html">The GCC team</a>
 <br>
-<small><i>Last modified on October 27, 1999.</i></small>
+<small><i>Last modified on November 3, 1999.</i></small>
 </address>
 
 </body>
