--- a/htdocs/gcc-2.95/buildstat.html
+++ b/htdocs/gcc-2.95/buildstat.html
@@ -20,6 +20,9 @@ Successful
 <p><b>alphaev5-dec-osf4.0d</b><br>
 Successful
 
+<p><b>alphaev56-dec-osf4.0c</b><br>
+Successful
+
 <p><b>alphaev56-dec-osf4.0d</b><br>
 Successful
 
@@ -160,7 +163,7 @@ Successful
 
 <hr>
 <p>
-<i>Last modified on October 30, 1999.</i>
+<i>Last modified on November 4, 1999.</i>
 
 </body>
 </html>
