--- a/htdocs/java/gcj.html
+++ b/htdocs/java/gcj.html
@@ -1,7 +1,8 @@
 <html>
 <head>
-<meta http-equiv="Refresh" content="6; URL=http://sourceware.cygnus.com/java/">
+<meta http-equiv="refresh" content="6; URL=http://sourceware.cygnus.com/java/">
 <title>The GCJ page has moved...</title>
+</head>
 <body>
 This page has moved to <a href="http://sourceware.cygnus.com/java/">http://sourceware.cygnus.com/java</a>.
 <p>
