1999-11-05  Jason Molenda  (jsm@bugshack.cygnus.com)
	* htdocs/gcj.html:  Again, just a dummie commit.

--- a/htdocs/java/gcj.html
+++ b/htdocs/java/gcj.html
@@ -1,10 +1,10 @@
 <html>
 <head>
-<meta http-equiv="refresh" content="6; URL=http://sourceware.cygnus.com/java/">
+<meta http-equiv="refresh" content="2; URL=http://sourceware.cygnus.com/java/">
 <title>The GCJ page has moved...</title>
 </head>
 <body>
-This page has moved to <a href="http://sourceware.cygnus.com/java/">http://sourceware.cygnus.com/java</a>.
+This page has moved to <a href="/java/">http://sourceware.cygnus.com/java/</a>.
 <p>
 You should be taken to the new location automatically.
 <p>
