Complete description of --enable-threads.

--- a/htdocs/install/configure.html
+++ b/htdocs/install/configure.html
@@ -97,11 +97,13 @@ GCC.  A partial list of supported <tt>options</tt>:
   etc.  This is the default. 
 
   <li> <tt>--enable-threads</tt> -- Specify that the target supports threads.
-  This affects only the Objective-C compiler and runtime library.
+  This affects the Objective-C compiler and runtime library, and exception
+  handling for other languages like C++ and Java.
 
   <li> <tt>--enable-threads=</tt><i>lib</i> -- Specify that <i>lib</i> is the
-  thread support library.  This affects only the Objective-C compiler  and
-  runtime library.
+  thread support library.  This affects the Objective-C compiler and
+  runtime library, and exception handling for other languages like C++ and
+  Java.
 
   <li> <tt>--with-cpu=</tt><i>cpu</i> -- Specify which cpu variant the
   compiler should generate code for by default.  This is currently
@@ -175,7 +177,7 @@ that each <tt>--with</tt> option has a corresponding <tt>--without</tt> option.
 
 <p>
 <hr>
-<i>Last modified on July 16, 1999.</i>
+<i>Last modified on November 6, 1999.</i>
 
 </body>
 </html>
