--- a/htdocs/extensions.html
+++ b/htdocs/extensions.html
@@ -23,6 +23,13 @@ achieves substantial speed improvements over GCC.</p>
 <p>This is an experimental port for the 8bit ATMEL AVR micro
 controllers.</p>
 
+<h2><a href="http://home.worldnet.fr/stcarrez/m68hc11_port.html">M68HC11
+port</a></h2>
+<p>This is a port of GCC, GDB and the Binutils for Motorola 68HC11
+(later 68HC12). This port supports 8,16,32 and 64-bits integers
+as well as 32 and 64-bits floats. It uses ELF32 for object files and
+DWARF-2 for debugging information.
+
 <h2><a name="sun-make"><a href="ftp://ftp.axis.se/pub/users/hp/gcc/gcc-2.95.1-sun-make-patch1.txt">Patch
 to build elsewhere than in the source directory using Sun make</a></h2>
 
@@ -44,7 +51,7 @@ installation on non-Sun systems or when using GNU make.</p>
 <p><a href="index.html">Return to the GCC home page</a>
 
 <hr>
-<p><i>Last modified:  November 3, 1999</i>
+<p><i>Last modified:  November 9, 1999</i>
 
 </body>
 </html>
