--- a/htdocs/gcc-2.95/buildstat.html
+++ b/htdocs/gcc-2.95/buildstat.html
@@ -95,6 +95,9 @@ Successful
 <p><b>i586-pc-sco3.2v5.0.5</b><br>
 Successful
 
+<p><b>i586-unisys-sysv4</b><br>
+Successful
+
 <p><b>i686-pc-linux-gnu</b><br>
 Successful
 
@@ -163,7 +166,7 @@ Successful
 
 <hr>
 <p>
-<i>Last modified on November 4, 1999.</i>
+<i>Last modified on November 10, 1999.</i>
 
 </body>
 </html>
