--- a/htdocs/mirrors.html
+++ b/htdocs/mirrors.html
@@ -38,6 +38,11 @@ if you are mirroring the GCC pages so we can note it here!
 <li>Japan: <a href="ftp://ftp.lab.kdd.co.jp/lang/egcs">ftp.lab.kdd.co.jp</a>
 <li>Japan: <a href="ftp://ftp.shonan.bunkyo.ac.jp/pub/lang/egcs">ftp.shonan.bunkyo.ac.jp</a>
 <LI>Japan: <A HREF="ftp://ftp.iij.ad.jp/pub/egcs">ftp.iij.ad.jp</a>
+<li>Japan: <a href="ftp://ring.aist.go.jp/pub/lang/egcs">ring.aist.go.jp</a>
+<li>Japan: <a href="ftp://ring.etl.go.jp/pub/lang/egcs">ring.etl.go.jp</a>
+<li>Japan: <a href="ftp://ring.crl.go.jp/pub/lang/egcs">ring.crl.go.jp</a>
+<li>Japan: <a href="ftp://core.ring.gr.jp/pub/lang/egcs/">core.ring.gr.jp</a>
+<li>Japan: <a href="ftp://ftp.ring.gr.jp/pub/lang/egcs/">ftp.ring.gr.jp</a>
 <LI>Norway: <a href="ftp://ftp.pvv.ntnu.no/pub/egcs">ftp.pvv.ntnu.no</a>
 <LI>Poland: <A HREF="ftp://ftp.task.gda.pl/mirror/egcs.cygnus.com/pub/egcs">ftp.task.gda.pl</a>
 <LI>Poland (Warsaw): <A HREF="ftp://sunsite.icm.edu.pl/pub/programming/egcs/">sunsite.icm.edu.pl</a>
@@ -52,6 +57,7 @@ if you are mirroring the GCC pages so we can note it here!
 <LI>Taiwan <a href="ftp://ftp1.sinica.edu.tw/pub3/CYGNUS/gcc/">TAIWAN: ftp1.sinica.edu.tw</a>
 <li>Turkey (Izmir): <a href="ftp://gcc.deu.edu.tr/pub/egcs">gcc.deu.edu.tr</a>
 <li>UK: <a href="ftp://unix.hensa.ac.uk/mirrors/egcs.cygnus.com/pub/egcs/">unix.hensa.ac.uk</a> 
+<li>UK: <a href="ftp://sunsite.doc.ic.ac.uk/Mirrors/egcs.cygnus.com/pub/egcs/">sunsite.doc.ic.ac.uk</a>
 <li>US (California): <a href="ftp://ftp.yggdrasil.com/mirrors/site/egcs.cygnus.com/pub/egcs">ftp.yggdrasil.com</a>
 <li>US (Arizona): <a href="ftp://ftp.ninemoons.com/pub/mirrors/egcs/">ftp.ninemoons.com</a>
 thanks to <a href="mailto:ktroulos@noc.ntua.gr">Costas Troulos</a>.
@@ -68,25 +74,21 @@ where the mirror is located.
 <address>
 <a href="about.html">The GCC team</a>
 <br>
-<small><i>Last modified on October 27, 1999.</i></small>
+<small><i>Last modified on November 10, 1999.</i></small>
 </address>
 
 </body>
 </html>
 
-<!-- <li>US (Merrifield, VA): <a href="ftp://mirrors.rcn.com:/pub/egcs/">mirrors.rcn.com</a>! -->
-<!-- <LI><A HREF="ftp://linux.colba.net/pub/pcg/egcs/">CANADA: linux.colba.net (Montreal) (snapshots only)</A>, thanks to <A HREF="mailto:draggy@kosmic.org">Nicolas St-Pierre</A>!<BR> -->
-<!-- <LI><A HREF="ftp://linux.cis.nctu.edu.tw/pub/packages/pcg/egcs/">TAIWAN: linux.cis.nctu.edu.tw</A>, thanks to <A HREF="http://www.cis.nctu.edu.tw/~is83120/">Aiken Sam</A>!<BR>! -->
-<!-- <li>UK: <a href="ftp://sunsite.doc.ic.ac.uk/Mirrors/egcs.cygnus.com/pub/egcs/">sunsite.doc.ic.ac.uk</a> !-->
+<!-- <li>US (Merrifield, VA): <a href="ftp://mirrors.rcn.com:/pub/egcs/">mirrors.rcn.com</a>! !-->
+<!-- <LI><A HREF="ftp://linux.colba.net/pub/pcg/egcs/">CANADA: linux.colba.net (Montreal) (snapshots only)</A>, thanks to <A HREF="mailto:draggy@kosmic.org">Nicolas St-Pierre</A>!<BR> !-->
+<!-- <LI><A HREF="ftp://linux.cis.nctu.edu.tw/pub/packages/pcg/egcs/">TAIWAN: linux.cis.nctu.edu.tw</A>, thanks to <A HREF="http://www.cis.nctu.edu.tw/~is83120/">Aiken Sam</A>!<BR>! !-->
 <!-- <LI>Nijmegen, Netherlands: <A HREF="ftp://ftp.nluug.nl/pub/languages/egcs">ftp.nluug.nl</a>, thanks to <a href="mailto:jc@ATComputing.nl">Jan Cristiaan van Winkel</a>! !-->
 <!-- <li>Japan: <a href="ftp://ftp.win.or.jp/pub/lang/egcs">ftp.win.or.jp</a> !-->
 <!-- <li>Russia (Moscow, partial):<a href="ftp://kiarchive.relcom.ru/pub/gnu/egcs/">kiarchive.relcom.ru</a> !-->
-<!--<li>US (Stanford): <a href="ftp://go.cygnus.com/pub/sourceware.cygnus.com/pub/egcs/">go.cygnus.com</a> !-->
-<!-- <li>Japan (Ibaraki): <a href="ftp://ring.aist.go.jp/pub/lang/egcs">ring.aist.go.jp</a> !-->
-<!-- <li>Japan: <a href="ftp://ring.etl.go.jp/pub/lang/egcs">ring.etl.go.jp</a>
+<!-- <li>US (Stanford): <a href="ftp://go.cygnus.com/pub/sourceware.cygnus.com/pub/egcs/">go.cygnus.com</a> !-->
 <!-- <li>Japan (Tokyo): <a href="ftp://ring.asahi-net.or.jp/pub/lang/egcs">ring.asahi-net.or.jp</a> !-->
-<!-- <li>Japan: <a href="ftp://ring.crl.go.jp/pub/lang/egcs">ring.crl.go.jp</a> !-->
-<!-- <li>Japan (Tokyo): <a href="ftp://ring.so-net.ne.jp/pub/lang/egcs">ring.so-net.ne.jp</a> !-->
+<!--<li>Japan (Tokyo): <a href="ftp://ring.so-net.ne.jp/pub/lang/egcs">ring.so-net.ne.jp</a>  !-->
 <!-- <li>Japan: <a href="ftp://ring.jah.ne.jp/pub/lang/egcs">ring.jah.ne.jp</a> !-->
 <!-- <li>Japan: <a href="ftp://ring.astem.or.jp/pub/lang/egcs">ring.astem.or.jp</a> !-->
 <!-- <li>Japan: <a href="ftp://ring.saitama-u.ac.jp/pub/lang/egcs">ring.saitama-u.ac.jp</a> !-->
