Add information about GCC 2.95.2 release branch. By R. Kelley Cook <KelleyCook@attglobal.net>.

--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -74,6 +74,7 @@ you may want to check out include:
 <ul>
   <li> gcc_latest_snapshot
   <li> gcc_ss_yyyymmdd
+  <li> gcc-2_95_2-release
   <li> gcc-2_95_1-release
   <li> gcc-2_95-release
   <li> gcc-2_95-branch
@@ -98,7 +99,7 @@ the compiler itself.  Use <code>cvs co wwwdocs</code> to check out
 the web pages.
 
 <hr>
-<i>Last modified on October 21, 1999</i>
+<i>Last modified on November 11, 1999</i>
 
 </body>
 </html>
