- Work around problem with #flastmod by refering symlink. - Fix case nit with </title>

--- a/htdocs/search.html
+++ b/htdocs/search.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>GCC detailed search</TITLE>
+<title>GCC detailed search</title>
 </head>
 <body>
 <h1><a href="index.html">GCC</a> detailed search</h1>
@@ -204,10 +204,10 @@ Mailing lists.  Ticking a box is like marking all dates for that list:
 <input type=reset>
 </form>
 <hr noshade size=1>
-<i>Search database last updated on
-<!--#config timefmt="%B %d, %Y (%H:%M %Z) " -->
+<i>Search database last updated on 
+<!--#config timefmt="%B %d, %Y (%H:%M %Z)" -->
 <!--#config errmsg="(Sorry, the database is not here)" -->
-<!--#flastmod file="/sourceware/htdig/gcc/db/db.docdb" -->
+<!--#flastmod file="db.docdb" -->
 </i>
 <br>
 <!--#config timefmt="%B %d, %Y" -->
