Add reference to search.html

--- a/htdocs/searchbox.html
+++ b/htdocs/searchbox.html
@@ -1,7 +1,7 @@
 <hr noshade size=2>
 This search will allow you to search the contents of
 all the publicly available WWW documents at this site.
-<br>
+There is also a <a href="search.html">detailed search form</a>.
 <p>
 <form method="post" action="http://egcs.cygnus.com/cgi-bin/htsearch">
 <font size=-1>
