Have choice buttons for the testresults and benchresults areas

--- a/htdocs/search.html
+++ b/htdocs/search.html
@@ -48,22 +48,22 @@ if nothing is marked, all pages.
 <!-- These two match all mailing lists, although "e" for egcs may not be
      indexed at the moment.  -->
 <option value="/ml/e/ml/g">
-all the mailing lists.
+all mailing lists.
 <!-- By not mentioning (.co)m/ml for the mailing lists, we exclude them
      and "restrict" to everything else.  Since we're in a restrict
      field; that's the best we can do.  -->
 <option
 value="m/a|m/b|m/c|m/d|m/e|m/f|m/g|m/h|m/i|m/j|m/l|m/mi|m/n|m/o|m/p|m/r|m/s|m/t|m/w">
-all the web pages.
+all web pages.
 <!-- We restrict to m/bu(gs.html) m/th(anks.html) and
-     m/ti(meline.html), excluding testresults and benchresults.  -->
+     m/ti(meline.html), excluding testresults and benchresults.
+     FIXME: Better wording.  -->
 <option
 value="m/a|m/be|m/bu|m/c|m/d|m/e|m/f|m/g|m/h|m/i|m/j|m/l|m/mi|m/n|m/o|m/p|m/r|m/s|m/th|/m/ti|m/w">
 all regular web pages.
 </select>
 <br>
-<!-- These "areas" are just the ones I could easily discern.  Note that
-     "/testresults/" and "/benchresults/" are not currently indexed. -->
+<!-- These "areas" are just the ones I could easily discern.  -->
 <font size=-1>Web page areas:
 </font>
 <br>
@@ -74,6 +74,12 @@ value="m/a|m/bu|m/ba|m/c|m/d|m/e|m/f|m/g|m/h|m/i|m/j|m/l|m/mi|m/n|m/p|m/r|m/s|m/
 <a href="onlinedocs/">
 Documentation
 </a>&nbsp;
+<input type=checkbox name=restrict value="m/te">
+<a href="testresults/">
+Test results</a>&nbsp;
+<input type=checkbox name=restrict value="m/be">
+<a href="benchresults/">
+Benchmark results</a>
 <br>
 <p>
 <font size=-1>
