Exclude benchresults and testresults for the "exclude all" choice. Break line before the sentence that links to the big search form.

--- a/htdocs/searchbox.html
+++ b/htdocs/searchbox.html
@@ -1,6 +1,7 @@
 <hr noshade size=2>
 This search will allow you to search the contents of
 all the publicly available WWW documents at this site.
+<br>
 There is also a <a href="search.html">detailed search form</a>.
 <p>
 <form method="post" action="http://egcs.cygnus.com/cgi-bin/htsearch">
@@ -18,8 +19,8 @@ Format: <select name="format">
 </select>
 
 Limit to: <select name="exclude"> 
-<option value="/ml/">Regular pages (no mailing lists)</option>
-<option value="">Entire site (including mailing lists)</option>
+<option value="/ml/|/test|/bench">Regular pages (no mailing lists or testresults)</option>
+<option value="">Entire site (including mailing lists and testresults)</option>
 </select>
 
 Sort by: <select name="sort">
