Add missing '|' for mailing lists

--- a/htdocs/search.html
+++ b/htdocs/search.html
@@ -47,7 +47,7 @@ The search will include what you marked below and
 if nothing is marked, all pages.
 <!-- These two match all mailing lists, although "e" for egcs may not be
      indexed at the moment.  -->
-<option value="/ml/e/ml/g">
+<option value="/ml/e|/ml/g">
 all mailing lists.
 <!-- By not mentioning (.co)m/ml for the mailing lists, we exclude them
      and "restrict" to everything else.  Since we're in a restrict
