--- a/htdocs/mirrors.html
+++ b/htdocs/mirrors.html
@@ -19,6 +19,7 @@ if you are mirroring the GCC pages so we can note it here!
 <LI>Brasil: <a href="ftp://ftp.softaplic.com.br/pub/sourceware/gcc">ftp.softaplic.com.br</a>
 <LI>Brasil (releases only, no snapshots): <A HREF="ftp://ftp.unicamp.br/pub/gnu/=EXTRA=/cygnus/egcs/">ftp.unicamp.br</a>
 <li>Canada: <a href="ftp://ftp.crc.ca/pub/packages/egcs">ftp.crc.ca</a>
+<li>China (Hong Kong): <a href="ftp://ftp.foruto.com/pub/gcc.gnu.org/egcs/">ftp.foruto.com</a>
 <li>Czech Republic: <a href="ftp://sunsite.mff.cuni.cz/pub/GNU/egcs/">sunsite.mff.cuni.cz</a>
 <li>Czech Republic: <a href="ftp://ftp.gts.cz/pub/MIRRORS/ftp.cygnus.com/pub/egcs/">ftp.gts.cz</a>
 <li>Denmark: <a href="ftp://sunsite.auc.dk/pub/egcs/">sunsite.auc.dk</a> 
@@ -74,7 +75,7 @@ where the mirror is located.
 <address>
 <a href="about.html">The GCC team</a>
 <br>
-<small><i>Last modified on November 10, 1999.</i></small>
+<small><i>Last modified on November 16, 1999.</i></small>
 </address>
 
 </body>
