Update the importance of --with-headers.

--- a/htdocs/install/configure.html
+++ b/htdocs/install/configure.html
@@ -160,9 +160,10 @@ GCC.  A partial list of supported <tt>options</tt>:
 <p>Some options which only apply to building cross compilers:
 <ul>
   <li> <tt>--with-headers=</tt><i>dir</i> -- Specifies a directory which has
-  target include files.  These include files will be copied into the gcc
-  install directory.  Fixincludes will be run on these files to make them
-  compatible with gcc.
+  target include files.  THIS OPTION is REQUIRED when building a cross
+  compiler.  These include files will be copied into the gcc install
+  directory.  Fixincludes will be run on these files to make them compatible
+  with gcc.
   <li> <tt>--with-libs=</tt><i>"dir1 dir2 ... dirN"</i> -- Specifies a list of
   directories which contain the target runtime libraries.  These libraries will
   be copied into the gcc install directory.
