--- a/htdocs/install/configure.html
+++ b/htdocs/install/configure.html
@@ -161,9 +161,9 @@ GCC.  A partial list of supported <tt>options</tt>:
 <ul>
   <li> <tt>--with-headers=</tt><i>dir</i> -- Specifies a directory which has
   target include files.  THIS OPTION is REQUIRED when building a cross
-  compiler.  These include files will be copied into the gcc install
-  directory.  Fixincludes will be run on these files to make them compatible
-  with gcc.
+  compiler, if <tt>${prefix}/${target}/sys-include</tt> doesn't pre-exist.
+  These include files will be copied into the gcc install directory.
+  Fixincludes will be run on these files to make them compatible with gcc.
   <li> <tt>--with-libs=</tt><i>"dir1 dir2 ... dirN"</i> -- Specifies a list of
   directories which contain the target runtime libraries.  These libraries will
   be copied into the gcc install directory.
