Add some further information on building cross-compilers. By Dietmar Schindler <schd@mra.man.de>.

--- a/htdocs/install/configure.html
+++ b/htdocs/install/configure.html
@@ -42,8 +42,12 @@ Otherwise the configuration scripts may fail.
   recommend you not provide a configure target when configuring a
   native compiler.
 
-  <li> <b>target</b> must be specified when configuring a cross compiler;
+  <li> <b>target</b> must be specified as <tt>--target=</tt><i>target</i>
+  when configuring a cross compiler;
   examples of valid targets would be i960-rtems, m68k-coff, sh-elf, etc.
+
+  <li>Specifying just <i>target</i> instead of <tt>--target=</tt><i>target</i>
+  implies that the host defaults to <i>target</i>.
 </ul>
 
 
@@ -178,7 +182,7 @@ that each <tt>--with</tt> option has a corresponding <tt>--without</tt> option.
 
 <p>
 <hr>
-<i>Last modified on November 6, 1999.</i>
+<i>Last modified on November 19, 1999.</i>
 
 </body>
 </html>
